src/tests/snapshots/alloy__tests__checking@variables.alloy.snap
---
source: src/tests/mod.rs
expression: checked.unwrap()
input_file: src/tests/cases/variables.alloy
---
Ast(
    [
        Expression {
            kind: VariableDecl {
                name: "a",
                value: Expression {
                    kind: LiteralInt(
                        2,
                    ),
                    span: Span(
                        5,
                        6,
                    ),
                    state: Checked(
                        "Int",
                        2,
                    ),
                },
                mutable: false,
                ty: None,
            },
            span: Span(
                0,
                6,
            ),
            state: Checked(
                "Unit",
                1,
            ),
        },
        Expression {
            kind: VariableDecl {
                name: "b",
                value: Expression {
                    kind: LiteralInt(
                        3,
                    ),
                    span: Span(
                        12,
                        13,
                    ),
                    state: Checked(
                        "Int",
                        2,
                    ),
                },
                mutable: true,
                ty: None,
            },
            span: Span(
                7,
                13,
            ),
            state: Checked(
                "Unit",
                1,
            ),
        },
        Expression {
            kind: VariableDecl {
                name: "c",
                value: Expression {
                    kind: Infix {
                        op: Add,
                        lh: Expression {
                            kind: Ident(
                                "a",
                            ),
                            span: Span(
                                23,
                                24,
                            ),
                            state: Checked(
                                "Int",
                                2,
                            ),
                        },
                        rh: Expression {
                            kind: Ident(
                                "b",
                            ),
                            span: Span(
                                27,
                                28,
                            ),
                            state: Checked(
                                "Int",
                                2,
                            ),
                        },
                    },
                    span: Span(
                        23,
                        28,
                    ),
                    state: Checked(
                        "Int",
                        2,
                    ),
                },
                mutable: true,
                ty: Some(
                    TypeIdent(
                        "Int",
                    ),
                ),
            },
            span: Span(
                14,
                28,
            ),
            state: Checked(
                "Unit",
                1,
            ),
        },
        Expression {
            kind: Prefix {
                op: Not,
                rh: Expression {
                    kind: Ident(
                        "c",
                    ),
                    span: Span(
                        30,
                        31,
                    ),
                    state: Checked(
                        "Int",
                        2,
                    ),
                },
            },
            span: Span(
                29,
                31,
            ),
            state: Checked(
                "Bool",
                4,
            ),
        },
        Expression {
            kind: VariableDecl {
                name: "d",
                value: Expression {
                    kind: LiteralBool(
                        true,
                    ),
                    span: Span(
                        39,
                        43,
                    ),
                    state: Checked(
                        "Bool",
                        4,
                    ),
                },
                mutable: false,
                ty: None,
            },
            span: Span(
                34,
                43,
            ),
            state: Checked(
                "Unit",
                1,
            ),
        },
        Expression {
            kind: VariableDecl {
                name: "e",
                value: Expression {
                    kind: LiteralBool(
                        false,
                    ),
                    span: Span(
                        49,
                        54,
                    ),
                    state: Checked(
                        "Bool",
                        4,
                    ),
                },
                mutable: false,
                ty: None,
            },
            span: Span(
                44,
                54,
            ),
            state: Checked(
                "Unit",
                1,
            ),
        },
        Expression {
            kind: VariableDecl {
                name: "f",
                value: Expression {
                    kind: Prefix {
                        op: Not,
                        rh: Expression {
                            kind: Ident(
                                "d",
                            ),
                            span: Span(
                                62,
                                63,
                            ),
                            state: Checked(
                                "Bool",
                                4,
                            ),
                        },
                    },
                    span: Span(
                        61,
                        63,
                    ),
                    state: Checked(
                        "Bool",
                        4,
                    ),
                },
                mutable: false,
                ty: None,
            },
            span: Span(
                56,
                63,
            ),
            state: Checked(
                "Unit",
                1,
            ),
        },
        Expression {
            kind: VariableDecl {
                name: "g",
                value: Expression {
                    kind: Prefix {
                        op: Not,
                        rh: Expression {
                            kind: Prefix {
                                op: Not,
                                rh: Expression {
                                    kind: Ident(
                                        "e",
                                    ),
                                    span: Span(
                                        71,
                                        72,
                                    ),
                                    state: Checked(
                                        "Bool",
                                        4,
                                    ),
                                },
                            },
                            span: Span(
                                70,
                                72,
                            ),
                            state: Checked(
                                "Bool",
                                4,
                            ),
                        },
                    },
                    span: Span(
                        69,
                        72,
                    ),
                    state: Checked(
                        "Bool",
                        4,
                    ),
                },
                mutable: false,
                ty: None,
            },
            span: Span(
                64,
                72,
            ),
            state: Checked(
                "Unit",
                1,
            ),
        },
    ],
)
