src/tests/snapshots/alloy__tests__parsing@function-calls.alloy.snap
---
source: src/tests/mod.rs
expression: ast.unwrap()
input_file: src/tests/cases/function-calls.alloy
---
Ast(
    [
        Expression {
            kind: MethodCall {
                caller: Expression {
                    kind: LiteralInt(
                        2,
                    ),
                    span: Span(
                        0,
                        1,
                    ),
                    state: Unchecked,
                },
                name: "to_unit",
                args: [],
            },
            span: Span(
                0,
                11,
            ),
            state: Unchecked,
        },
        Expression {
            kind: VariableDecl {
                name: "a",
                value: Expression {
                    kind: LiteralBool(
                        true,
                    ),
                    span: Span(
                        16,
                        20,
                    ),
                    state: Unchecked,
                },
                mutable: true,
                ty: None,
            },
            span: Span(
                13,
                20,
            ),
            state: Unchecked,
        },
        Expression {
            kind: VariableAssignment {
                name: "a",
                value: Expression {
                    kind: LiteralBool(
                        false,
                    ),
                    span: Span(
                        23,
                        28,
                    ),
                    state: Unchecked,
                },
            },
            span: Span(
                21,
                28,
            ),
            state: Unchecked,
        },
        Expression {
            kind: MethodCall {
                caller: Expression {
                    kind: LiteralInt(
                        3,
                    ),
                    span: Span(
                        29,
                        30,
                    ),
                    state: Unchecked,
                },
                name: "to_unit",
                args: [
                    Expression {
                        kind: Ident(
                            "a",
                        ),
                        span: Span(
                            39,
                            40,
                        ),
                        state: Unchecked,
                    },
                    Expression {
                        kind: LiteralInt(
                            4,
                        ),
                        span: Span(
                            41,
                            42,
                        ),
                        state: Unchecked,
                    },
                ],
            },
            span: Span(
                29,
                43,
            ),
            state: Unchecked,
        },
    ],
)
