src/tests/snapshots/alloy__tests__parsing@maths.alloy.snap
---
source: src/tests/mod.rs
expression: ast.unwrap()
input_file: src/tests/cases/maths.alloy
---
Ast(
    [
        Expression {
            kind: Infix {
                op: Add,
                lh: Expression {
                    kind: Infix {
                        op: Subtract,
                        lh: Expression {
                            kind: LiteralInt(
                                0,
                            ),
                            span: Span(
                                0,
                                1,
                            ),
                            state: Unchecked,
                        },
                        rh: Expression {
                            kind: LiteralInt(
                                1,
                            ),
                            span: Span(
                                4,
                                5,
                            ),
                            state: Unchecked,
                        },
                    },
                    span: Span(
                        0,
                        5,
                    ),
                    state: Unchecked,
                },
                rh: Expression {
                    kind: LiteralInt(
                        2,
                    ),
                    span: Span(
                        8,
                        9,
                    ),
                    state: Unchecked,
                },
            },
            span: Span(
                0,
                9,
            ),
            state: Unchecked,
        },
        Expression {
            kind: Infix {
                op: Divide,
                lh: Expression {
                    kind: LiteralInt(
                        3,
                    ),
                    span: Span(
                        11,
                        12,
                    ),
                    state: Unchecked,
                },
                rh: Expression {
                    kind: LiteralInt(
                        4,
                    ),
                    span: Span(
                        14,
                        15,
                    ),
                    state: Unchecked,
                },
            },
            span: Span(
                11,
                15,
            ),
            state: Unchecked,
        },
        Expression {
            kind: Infix {
                op: Power,
                lh: Expression {
                    kind: LiteralInt(
                        4,
                    ),
                    span: Span(
                        17,
                        18,
                    ),
                    state: Unchecked,
                },
                rh: Expression {
                    kind: LiteralInt(
                        3,
                    ),
                    span: Span(
                        19,
                        20,
                    ),
                    state: Unchecked,
                },
            },
            span: Span(
                17,
                20,
            ),
            state: Unchecked,
        },
        Expression {
            kind: Infix {
                op: LessThan,
                lh: Expression {
                    kind: LiteralInt(
                        5,
                    ),
                    span: Span(
                        22,
                        23,
                    ),
                    state: Unchecked,
                },
                rh: Expression {
                    kind: LiteralInt(
                        6,
                    ),
                    span: Span(
                        26,
                        27,
                    ),
                    state: Unchecked,
                },
            },
            span: Span(
                22,
                27,
            ),
            state: Unchecked,
        },
        Expression {
            kind: Infix {
                op: GreaterThan,
                lh: Expression {
                    kind: LiteralInt(
                        7,
                    ),
                    span: Span(
                        28,
                        29,
                    ),
                    state: Unchecked,
                },
                rh: Expression {
                    kind: LiteralInt(
                        8,
                    ),
                    span: Span(
                        32,
                        33,
                    ),
                    state: Unchecked,
                },
            },
            span: Span(
                28,
                33,
            ),
            state: Unchecked,
        },
        Expression {
            kind: Infix {
                op: LessThanOrEqual,
                lh: Expression {
                    kind: LiteralInt(
                        9,
                    ),
                    span: Span(
                        34,
                        35,
                    ),
                    state: Unchecked,
                },
                rh: Expression {
                    kind: LiteralInt(
                        10,
                    ),
                    span: Span(
                        39,
                        41,
                    ),
                    state: Unchecked,
                },
            },
            span: Span(
                34,
                41,
            ),
            state: Unchecked,
        },
        Expression {
            kind: Infix {
                op: GreaterThanOrEqual,
                lh: Expression {
                    kind: LiteralInt(
                        11,
                    ),
                    span: Span(
                        42,
                        44,
                    ),
                    state: Unchecked,
                },
                rh: Expression {
                    kind: LiteralInt(
                        12,
                    ),
                    span: Span(
                        48,
                        50,
                    ),
                    state: Unchecked,
                },
            },
            span: Span(
                42,
                50,
            ),
            state: Unchecked,
        },
        Expression {
            kind: Infix {
                op: Equals,
                lh: Expression {
                    kind: LiteralInt(
                        13,
                    ),
                    span: Span(
                        51,
                        53,
                    ),
                    state: Unchecked,
                },
                rh: Expression {
                    kind: LiteralInt(
                        14,
                    ),
                    span: Span(
                        57,
                        59,
                    ),
                    state: Unchecked,
                },
            },
            span: Span(
                51,
                59,
            ),
            state: Unchecked,
        },
        Expression {
            kind: Infix {
                op: NotEquals,
                lh: Expression {
                    kind: LiteralInt(
                        15,
                    ),
                    span: Span(
                        60,
                        62,
                    ),
                    state: Unchecked,
                },
                rh: Expression {
                    kind: LiteralInt(
                        16,
                    ),
                    span: Span(
                        66,
                        68,
                    ),
                    state: Unchecked,
                },
            },
            span: Span(
                60,
                68,
            ),
            state: Unchecked,
        },
        Expression {
            kind: Prefix {
                op: Not,
                rh: Expression {
                    kind: LiteralInt(
                        17,
                    ),
                    span: Span(
                        71,
                        73,
                    ),
                    state: Unchecked,
                },
            },
            span: Span(
                70,
                73,
            ),
            state: Unchecked,
        },
    ],
)
