src/tests/snapshots/alloy__tests__parsing@numbers.alloy.snap
---
source: src/tests/mod.rs
expression: ast.unwrap()
input_file: src/tests/cases/numbers.alloy
---
Ast(
    [
        Expression {
            kind: Infix {
                op: Add,
                lh: Expression {
                    kind: Infix {
                        op: Add,
                        lh: Expression {
                            kind: LiteralFloat(
                                1.2,
                            ),
                            span: Span(
                                0,
                                3,
                            ),
                            state: Unchecked,
                        },
                        rh: Expression {
                            kind: LiteralInt(
                                100000,
                            ),
                            span: Span(
                                6,
                                13,
                            ),
                            state: Unchecked,
                        },
                    },
                    span: Span(
                        0,
                        13,
                    ),
                    state: Unchecked,
                },
                rh: Expression {
                    kind: LiteralFloat(
                        0.234,
                    ),
                    span: Span(
                        16,
                        20,
                    ),
                    state: Unchecked,
                },
            },
            span: Span(
                0,
                20,
            ),
            state: Unchecked,
        },
    ],
)
